# voice_assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ecocar/: app.py
ecocar/chat_service/: chat.py
ecocar/interaction_service/: intService.py
ecocar/speech_service/: stt.py  tts.py
ecocar/wake-word_service/: wws-config.xml  wws.py
ecocar/wakeword_service/: wws.py
interaction_service/: intService.py
model1/voice_assistant/: app.py  ttss.py
model2/chat_service-main/server/: chat_server.py
model2/wakeword_service-main/server/: command.bat
model2/wakeword_service-main/src/wakeword_service/: listener.py
speech_service/: stt.py  tts.py
wakeword_service/: wws.py
