[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = "voice assistant for ecocar"
authors = ["dszurek <dszurek@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
suno-bark = { git = "https://github.com/suno-ai/bark.git", rev = "773624d26db84278a55aacae9a16d7b25fbccab8" }
openai-whisper = {git = "https://github.com/openai/whisper.git", rev = "ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab"}
trainer = "0.0.36"
absl-py = "2.1.0"
accelerate = "1.0.0"
aiofiles = "23.2.1"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyascii = "0.3.2"
anyio = "4.6.0"
async-timeout = "4.0.3"
asyncer = "0.0.7"
attrs = "23.2.0"
audioread = "3.0.1"
babel = "2.16.0"
bangla = "0.0.2"
bidict = "0.23.1"
blinker = "1.8.2"
blis = "0.7.11"
bnnumerizer = "0.0.2"
bnunicodenormalizer = "0.1.7"
boto3 = "1.34.69"
botocore = "1.34.69"
catalogue = "2.0.10"
cattrs = "23.2.3"
certifi = "2024.8.30"
cffi = "1.16.0"
cfgv = "3.4.0"
chainlit = "1.2.0"
charset-normalizer = "3.4.0"
chevron = "0.14.0"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
comtypes = "1.4.7"
contourpy = "1.2.1"
coqpit = "0.0.17"
coremltools = "7.1"
cycler = "0.12.1"
cymem = "2.0.8"
cython = "3.0.11"
dataclasses-json = "0.6.7"
dateparser = "1.1.8"
decorator = "5.1.1"
deprecated = "1.2.14"
distlib = "0.3.8"
docopt = "0.6.2"
einops = "0.7.0"
encodec = "0.1.1"
exceptiongroup = "1.2.2"
fastapi = "0.112.4"
filelock = "3.13.1"
filetype = "1.2.0"
flask = "3.0.3"
flatbuffers = "24.3.25"
fonttools = "4.54.1"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
funcy = "2.0"
g2pkk = "0.1.2"
googleapis-common-protos = "1.65.0"
greenlet = "3.1.1"
grpcio = "1.66.2"
gruut = "2.2.3"
gruut-ipa = "0.13.0"
gruut-lang-de = "2.0.1"
gruut-lang-en = "2.0.1"
gruut-lang-es = "2.0.1"
gruut-lang-fr = "2.0.2"
h11 = "0.14.0"
hangul-romanize = "0.1.0"
httpcore = "1.0.6"
httpx = "0.27.2"
huggingface-hub = "0.22.0"
humanfriendly = "10.0"
identify = "2.5.35"
idna = "3.10"
importlib-metadata = "8.4.0"
inflect = "7.4.0"
itsdangerous = "2.2.0"
jamo = "0.4.1"
jieba = "0.42.1"
jinja2 = "3.1.3"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonlines = "1.2.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
kiwisolver = "1.4.7"
langchain = "0.3.2"
langchain-community = "0.3.1"
langchain-core = "0.3.9"
langchain-ollama = "0.2.0"
langchain-text-splitters = "0.3.0"
langsmith = "0.1.131"
lazify = "0.4.0"
lazy-loader = "0.4"
librosa = "0.10.0"
literalai = "0.0.607"
llvmlite = "0.42.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.1"
matplotlib = "3.8.4"
mdurl = "0.1.2"
mock = "5.1.0"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.0.5"
murmurhash = "1.0.10"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "2.8.8"
nltk = "3.8.1"
nodeenv = "1.8.0"
nose = "1.3.7"
num2words = "0.5.13"
numba = "0.59.1"
numpy = "1.26.0"
ollama = "0.3.3"
onnxruntime = "1.19.2"
opentelemetry-api = "1.27.0"
opentelemetry-exporter-otlp = "1.27.0"
opentelemetry-exporter-otlp-proto-common = "1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
opentelemetry-exporter-otlp-proto-http = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-proto = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-semantic-conventions = "0.48b0"
openwakeword = "0.6.0"
orjson = "3.10.0"
packaging = "23.2"
pandas = "1.5.3"
pathlib-abc = "0.1.1"
pathy = "0.11.0"
pillow = "10.4.0"
pip = "24.2"
platformdirs = "4.2.0"
pooch = "1.8.2"
pre-commit = "3.6.2"
preshed = "3.0.9"
protobuf = "3.20.3"
psutil = "6.0.0"
pyaml = "23.12.0"
pyaudio = "0.2.14"
pycparser = "2.21"
pydantic-core = "2.18.4"
pydantic-settings = "2.5.2"
pygments = "2.17.2"
pyjwt = "2.9.0"
pynndescent = "0.5.13"
pyparsing = "3.1.4"
pypinyin = "0.53.0"
pypiwin32 = "223"
pyreadline3 = "3.5.4"
pysbd = "0.3.4"
pysine = "0.9.2"
python-crfsuite = "0.9.11"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-engineio = "4.9.1"
python-multipart = "0.0.9"
python-socketio = "5.11.4"
pyttsx3 = "2.98"
pytz = "2024.2"
pywin32 = "307"
pyyaml = "6.0.1"
regex = "2023.12.25"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
s3transfer = "0.10.1"
safetensors = "0.4.5"
scikit-learn = "1.0.2"
scipy = "1.14.1"
sentencepiece = "0.2.0"
setuptools = "75.1.0"
simple-websocket = "1.0.0"
six = "1.16.0"
smart-open = "6.4.0"
sniffio = "1.3.1"
sounddevice = "0.4.6"
soundfile = "0.12.1"
soxr = "0.5.0.post1"
spacy-legacy = "3.0.12"
speechrecognition = "3.10.1"
sqlalchemy = "2.0.29"
srsly = "2.4.8"
starlette = "0.37.2"
sudachidict-core = "20240716"
sudachipy = "0.6.8"
sympy = "1.13.3"
syncer = "2.0.3"
tenacity = "8.2.3"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
threadpoolctl = "3.5.0"
tiktoken = "0.6.0"
tokenizers = "0.15.2"
tomli = "2.0.2"
tqdm = "4.66.5"
transformers = "4.39.1"
typeguard = "4.3.0"
typer = "0.4.2"
typing-extensions = "4.10.0"
typing-inspect = "0.9.0"
tzdata = "2024.2"
tzlocal = "5.2"
umap-learn = "0.5.6"
unidecode = "1.3.8"
uptrace = "1.27.0"
urllib3 = "2.2.3"
uvicorn = "0.25.0"
virtualenv = "20.25.1"
wasabi = "0.10.1"
watchfiles = "0.20.0"
werkzeug = "3.0.4"
wheel = "0.44.0"
wrapt = "1.16.0"
wsproto = "1.2.0"
yarl = "1.9.4"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
